objects/Customer_Part_Number__c.object
<CustomObject>
    <description>This object is created for the ANZ Project</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Part Number</relationshipLabel>
        <relationshipName>Customer_Part_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account__r.Company_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Part Number</relationshipLabel>
        <relationshipName>Customer_Part_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Customer Part Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_Number__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SAPN</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Number__c</field>
            <operation>equals</operation>
            <value>535321</value>
        </filters>
        <label>SAPN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SP_AusNet</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Account__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Customer_Number__c</field>
            <operation>equals</operation>
            <value>766554</value>
        </filters>
        <label>SP AusNet</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Part Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>